[package]
name = "acl-rs"
version = "0.1.1"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
description = "A safe rust wrapper around the acl-sys crate"
license = "LGPL-2.1-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acl-sys = "1.0.1"
nix = "0.26"